:recycle: Fixed spacing of links node

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -201,7 +201,7 @@ img {
 }
 
 #node2 {
-    bottom: 395px;
+    bottom: 380px;
     animation: fadebackGround 6s;
     animation-fill-mode: forwards;
     left: 720px;
